<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/dimen_16dp"
    tools:context=".ui.view.fragments.FragmentStorage">

    <TextView
        android:id="@+id/textView"
        style="@style/TextSecondarySm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storage_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectImages"
        style="@style/button_main"
        android:text="@string/seleccionar_imagenes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/llCargando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSelectImages">

        <ProgressBar
            android:id="@+id/pbCargando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="195dp" />

        <TextView
            style="@style/TextSecondarySm"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subiendo_imagenes" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>